modules/alb/main.tf
resource "aws_security_group" "this" {
  name = local.security_group_name
  description = "Security group controlling inbound and outbound traffic to the LB."
  vpc_id = var.vpc_id

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 80
    to_port     = 80 
    protocol    = "tcp"
    cidr_blocks = var.subnets_cidrs_private
  }

  tags = local.common_tags
}

resource "aws_lb" "this" {
  name = local.lb_name  
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.this.id]
  subnets = var.subnets_ids_public

  access_logs {
    bucket  = var.access_logs_s3
    prefix  = local.access_logs_name
    enabled = true
  }

  tags = local.common_tags
}

resource "aws_lb_target_group" "this" {
  name = local.lb_target_group
  port = 80 
  protocol = "HTTP"
  target_type = "instance"
  vpc_id = var.vpc_id 

  tags = local.common_tags
}

resource "aws_lb_listener" "this"{
  load_balancer_arn = aws_lb.this.arn
  port = "443"
  protocol = "HTTPS"
  ssl_policy = "ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09"
  certificate_arn = var.certificate_arn

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }

  tags = local.common_tags
}
